--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/ico" href="/img/favicon.ico">
   <title>TICKETERIUM</title>
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <style>
     body,
@@ -33,6 +35,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 0 2rem;
     }
 
     .navbar-brand {
@@ -40,12 +43,12 @@
       color: var(--primary);
       display: flex;
       align-items: center;
-      font-size: 1.5rem;
+      font-size: 1.75rem;
     }
 
     .navbar-brand i {
-      margin-right: 8px;
-      font-size: 1.75rem;
+      margin-right: 10px;
+      font-size: 2rem;
     }
 
     .navbar-right {
@@ -64,11 +67,11 @@
     .network-badge {
       background-color: var(--primary);
       color: var(--neutral-white);
-      padding: 5px 10px;
+      padding: 6px 12px;
       border-radius: 12px;
-      font-size: 0.8rem;
+      font-size: 0.85rem;
       font-weight: 600;
-      margin-left: 1rem;
+      margin-left: 1.5rem;
       white-space: nowrap;
     }
 
@@ -78,37 +81,159 @@
       width: 100%;
       margin-top: 110px;
       z-index: 1;
+      background: repeating-linear-gradient(0deg, rgba(255, 255, 255, 0.03) 0px, rgba(255, 255, 255, 0.03) 2px, transparent 2px, transparent 10px),
+        repeating-linear-gradient(60deg, rgba(255, 255, 255, 0.1) 0px, rgba(255, 255, 255, 0.1) 1px, transparent 1px, transparent 3px),
+        radial-gradient(circle at 70% 30%, #3b37cc 0%, #1c1a66 50%, #6a66ff 100%);
+      background-size: 100% 100%, 100% 100%, cover;
     }
 
     .login-left {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: var(--neutral-light);
-      position: relative;
-    }
-
-    .login-right {
       flex: 1;
       background-image: linear-gradient(rgba(73, 69, 255, 0.3), rgba(73, 69, 255, 0.3)),
         url('https://images.unsplash.com/photo-1514525253161-7a46d19cd819?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');
       background-size: cover;
       background-position: center;
       position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .left-branding {
+      position: absolute;
+      top: 15%;
+      left: 10%;
+      align-items: flex-start;
+      justify-content: flex-start;
+      text-align: left;
+      color: var(--neutral-white);
+      gap: 1rem;
+      animation: slideIn 1.5s ease-in-out;
+    }
+
+    .left-branding h2 {
+      font-size: 3.5rem;
+      font-weight: 800;
+      background: linear-gradient(90deg, #ffeb3b, #ffffff);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 12px rgba(255, 255, 255, 0.7), 0 2px 4px rgba(0, 0, 0, 0.3);
+      margin: 0;
+      line-height: 1.2;
+    }
+
+    .left-branding h3 {
+      font-size: 2rem;
+      font-weight: 600;
+      background: linear-gradient(90deg, #fff59d, #ffffff);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.6), 0 2px 4px rgba(0, 0, 0, 0.3);
+      margin: 0;
+    }
+
+    .feature-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      color: var(--neutral-white);
+      font-size: 1.2rem;
+      font-weight: 500;
+      max-width: 80%;
+    }
+
+    .feature-list li {
+      display: flex;
+      align-items: center;
+      margin-bottom: 0.75rem;
+      opacity: 0;
+      animation: fadeInUp 0.5s ease-in-out forwards;
+      background: linear-gradient(90deg, #ffffff, #e0f7fa);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
+    }
+
+    .feature-list li:nth-child(1) {
+      animation-delay: 0.1s;
+    }
+
+    .feature-list li:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .feature-list li:nth-child(3) {
+      animation-delay: 0.3s;
+    }
+
+    .feature-list li:nth-child(4) {
+      animation-delay: 0.4s;
+    }
+
+    .feature-list li:nth-child(5) {
+      animation-delay: 0.5s;
+    }
+
+    .feature-list li:nth-child(6) {
+      animation-delay: 0.6s;
+    }
+
+    .feature-list i {
+      color: #ffeb3b;
+      margin-right: 0.5rem;
+    }
+
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateX(-50px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .login-right {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: transparent;
+      position: relative;
       z-index: 0;
     }
 
     .login-card {
-      max-width: 500px;
+      max-width: 550px;
       width: 90%;
-      padding: 3rem;
+      padding: 2.5rem;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(8px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 12px;
       animation: fadeIn 1s ease-in;
       transition: box-shadow 0.3s ease;
     }
 
     .login-card:hover {
-      box-shadow: 0 8px 24px rgba(73, 69, 255, 0.3);
+      box-shadow: 0 16px 40px rgba(73, 69, 255, 0.5);
     }
 
     .card-body {
@@ -120,19 +245,108 @@
 
     .login-title {
       margin-bottom: 0;
-      font-size: 2rem;
+      font-size: 1.75rem;
+      white-space: nowrap;
+      font-weight: 700;
     }
 
     .login-text,
     .login-error {
-      max-width: 80%;
+      max-width: 85%;
       text-align: center;
-      font-size: 1.1rem;
+      font-size: 1rem;
+      line-height: 1.5;
     }
 
     .btn-lg {
       font-size: 1.25rem;
       padding: 0.75rem 1.5rem;
+      font-weight: 600;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    .btn-lg:hover {
+      background-color: #5a55ff;
+      transform: scale(1.05);
+    }
+
+    .manual-toggle {
+      font-size: 0.9rem;
+      font-weight: 600;
+      color: var(--text-secondary);
+      background: none;
+      border: none;
+      padding: 0.5rem;
+      transition: color 0.3s ease, transform 0.2s ease;
+      cursor: pointer;
+    }
+
+    .manual-toggle:hover {
+      color: var(--primary);
+      text-decoration: underline;
+      transform: scale(1.05);
+    }
+
+    .manual-connect {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 85%;
+    }
+
+    .manual-connect .form-label {
+      font-size: 0.9rem;
+      font-weight: 600;
+      color: var(--text-secondary);
+    }
+
+    .manual-connect .form-control {
+      border-radius: 8px 0 0 8px;
+      border: 1px solid rgba(73, 69, 255, 0.3);
+      background: rgba(255, 255, 255, 0.1);
+      color: #333;
+    }
+
+    .manual-connect .btn-outline-primary {
+      border-radius: 0 8px 8px 0;
+      border: 1px solid var(--primary);
+      color: var(--primary);
+      font-weight: 600;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    .manual-connect .btn-outline-primary:hover {
+      background-color: var(--primary);
+      color: var(--neutral-white);
+      transform: scale(1.05);
+    }
+
+    .btn-outline-secondary {
+      border-radius: 8px;
+      border: 1px solid var(--neutral-light);
+      color: var(--text-secondary);
+      font-weight: 600;
+      transition: transform 0.2s ease;
+    }
+
+    .btn-outline-secondary:hover {
+      transform: scale(1.05);
+    }
+
+    .manual-connect.fade-in {
+      animation: fadeInInput 0.5s ease-in;
+    }
+
+    @keyframes fadeInInput {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .footer {
@@ -185,52 +399,66 @@
 
     @media (max-width: 768px) {
       .login-right {
-        display: none;
+        justify-content: center;
       }
 
       .login-left {
-        flex: 1;
+        display: none;
       }
 
       .login-text,
       .login-error {
         max-width: 90%;
+        font-size: 0.95rem;
       }
 
       .navbar-brand {
-        font-size: 1.25rem;
-      }
-
-      .navbar-brand i {
         font-size: 1.5rem;
       }
 
+      .navbar-brand i {
+        font-size: 1.75rem;
+      }
+
       .tagline {
-        font-size: 0.85rem;
+        font-size: 0.9rem;
       }
 
       .network-badge {
-        font-size: 0.75rem;
-        padding: 4px 8px;
+        font-size: 0.8rem;
+        padding: 5px 10px;
+        margin-left: 1rem;
       }
 
       .login-card {
-        max-width: 400px;
+        max-width: 450px;
         padding: 2rem;
       }
 
       .login-title {
-        font-size: 1.75rem;
-      }
-
-      .login-text,
-      .login-error {
-        font-size: 1rem;
+        font-size: 1.5rem;
       }
 
       .btn-lg {
         font-size: 1.1rem;
         padding: 0.6rem 1.2rem;
+      }
+
+      .manual-toggle {
+        font-size: 0.85rem;
+      }
+
+      .manual-connect .form-label {
+        font-size: 0.85rem;
+      }
+
+      .feature-list {
+        font-size: 1rem;
+        max-width: 90%;
+      }
+
+      .feature-list li {
+        margin-bottom: 0.5rem;
       }
     }
 
@@ -241,6 +469,21 @@
 
       .network-badge {
         margin-left: 0.5rem;
+      }
+
+      .login-card {
+        max-width: 350px;
+        padding: 1.5rem;
+      }
+
+      .login-text,
+      .login-error {
+        font-size: 0.9rem;
+      }
+
+      .btn-lg {
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
       }
     }
   </style>
@@ -253,7 +496,7 @@
         <i class="fas fa-ticket-alt"></i> TICKETERIUM
       </a>
       <div class="navbar-right">
-        <span class="tagline">Secure, Decentralized Event Ticketing</span>
+        <span class="tagline">Fair, Secure, Decentralized Event Ticketing</span>
         <span class="network-badge">Using Sepolia Testnet</span>
       </div>
     </div>
@@ -261,6 +504,21 @@
 
   <div class="login-container">
     <div class="login-left">
+      <canvas class="particle-canvas" id="particleCanvas"></canvas>
+      <div class="left-branding">
+        <h2>Why Pay Unfair Prices?</h2>
+        <h3>We've Got You Covered.</h3>
+        <ul class="feature-list mt-3">
+          <li><i class="fas fa-ticket-alt me-2"></i>Max Ticket Purchase Limit per Wallet</li>
+          <li><i class="fas fa-lock me-2"></i>Escrow-Based Ticket Transfers</li>
+          <li><i class="fas fa-dollar-sign me-2"></i>Maximum Secondary Resale Price</li>
+          <li><i class="fas fa-shield-alt me-2"></i>No Slashing or Unfair Penalties</li>
+          <li><i class="fas fa-eye me-2"></i>Transparent Blockchain Records</li>
+          <li><i class="fas fa-users me-2"></i>Fair Access for All Stakeholders</li>
+        </ul>
+      </div>
+    </div>
+    <div class="login-right">
       <div class="card login-card">
         <div class="card-body">
           <h1 class="login-title">Event Ticketing DApp</h1>
@@ -270,11 +528,19 @@
             <i class="fab fa-ethereum me-2"></i> Connect Wallet
           </button>
           <p id="noMetaMask" class="login-error d-none">Please install MetaMask to continue</p>
+          <button id="showManual" class="manual-toggle btn btn-link text-decoration-none">-- or Manual Input --</button>
+          <div id="manualConnect" class="manual-connect d-none mt-3 w-100">
+            <label for="manualAddress" class="form-label">Enter wallet address:</label>
+            <div class="input-group">
+              <input type="text" class="form-control" id="manualAddress" placeholder="0x...">
+              <button id="connectManual" class="btn btn-outline-primary">Connect</button>
+            </div>
+            <button id="cancelManual" class="btn btn-outline-secondary mt-2">Cancel</button>
+            <p id="manualError" class="login-error d-none mt-2">Invalid wallet address</p>
+            <p class="login-text mt-2">Use MetaMask for more secure access.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="login-right">
-      <canvas class="particle-canvas" id="particleCanvas"></canvas>
     </div>
   </div>
 
@@ -289,23 +555,108 @@
   <script src="https://cdn.jsdelivr.net/npm/web3@4.7.0/dist/web3.min.js"></script>
   <script>
     async function connectWallet() {
+      const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+      const noMetaMaskElement = document.getElementById('noMetaMask');
+      const connectButton = document.getElementById('connectWallet');
+
       if (typeof window.ethereum !== 'undefined') {
         try {
           await window.ethereum.request({ method: 'eth_requestAccounts' });
           window.location.href = 'dashboard.html';
         } catch (error) {
           console.error('Wallet connection failed:', error);
-          alert('Failed to connect wallet: ' + error.message);
+          noMetaMaskElement.classList.remove('d-none');
         }
+      } else if (isMobile) {
+        window.location.href = 'metamask://';
+        setTimeout(() => {
+          noMetaMaskElement.classList.remove('d-none');
+          connectButton.disabled = true;
+          window.location.href = 'https://metamask.io/download/';
+        }, 2000);
       } else {
-        document.getElementById('noMetaMask').classList.remove('d-none');
-        document.getElementById('connectWallet').disabled = true;
+        noMetaMaskElement.classList.remove('d-none');
+        connectButton.disabled = true;
+      }
+    }
+
+    async function connectManual() {
+      const addressInput = document.getElementById('manualAddress').value.trim();
+      const errorElement = document.getElementById('manualError');
+
+      // Reset error message
+      errorElement.classList.add('d-none');
+      errorElement.textContent = '';
+
+      // Check for empty input
+      if (!addressInput) {
+        errorElement.textContent = 'Please enter a wallet address';
+        errorElement.classList.remove('d-none');
+        return;
+      }
+
+      // Check if Web3 is available
+      if (typeof Web3 === 'undefined' || !window.Web3) {
+        errorElement.textContent = 'Web3 library not loaded. Please refresh the page or check your connection.';
+        errorElement.classList.remove('d-none');
+        console.error('Web3 is not defined');
+        return;
+      }
+
+      // Initialize Web3
+      let web3;
+      try {
+        web3 = new Web3();
+      } catch (error) {
+        errorElement.textContent = 'Failed to initialize Web3 library.';
+        errorElement.classList.remove('d-none');
+        console.error('Web3 initialization error:', error);
+        return;
+      }
+
+      // Validate address
+      try {
+        const isValidAddress = web3.utils.isAddress(addressInput);
+        if (isValidAddress) {
+          console.log('Valid address:', addressInput);
+          localStorage.setItem('walletAddress', addressInput);
+          window.location.href = 'dashboard.html';
+        } else {
+          errorElement.textContent = 'Invalid wallet address format';
+          errorElement.classList.remove('d-none');
+          console.log('Invalid address:', addressInput);
+        }
+      } catch (error) {
+        errorElement.textContent = 'Error validating address: ' + (error.message || 'Unknown error');
+        errorElement.classList.remove('d-none');
+        console.error('Address validation error:', error);
       }
     }
 
     document.getElementById('connectWallet').addEventListener('click', connectWallet);
+    document.getElementById('connectManual').addEventListener('click', connectManual);
+    document.getElementById('showManual').addEventListener('click', () => {
+      const manualSection = document.getElementById('manualConnect');
+      const showManualButton = document.getElementById('showManual');
+      if (manualSection.classList.contains('d-none')) {
+        manualSection.classList.remove('d-none');
+        manualSection.classList.add('fade-in');
+        showManualButton.classList.add('d-none');
+        setTimeout(() => manualSection.classList.remove('fade-in'), 500);
+      }
+    });
+    document.getElementById('cancelManual').addEventListener('click', () => {
+      const manualSection = document.getElementById('manualConnect');
+      const showManualButton = document.getElementById('showManual');
+      const errorElement = document.getElementById('manualError');
+      const addressInput = document.getElementById('manualAddress');
+      manualSection.classList.add('d-none');
+      showManualButton.classList.remove('d-none');
+      errorElement.classList.add('d-none');
+      addressInput.value = '';
+    });
 
-    // Particle animation for right half
+    // Particle animation for left side
     const canvas = document.getElementById('particleCanvas');
     const ctx = canvas.getContext('2d');
     canvas.width = window.innerWidth / 2;
